cluster/apps/default/adminer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &name adminer
  labels: &labels
    app.kubernetes.io/name: *name
spec:
  selector: *labels
  ports:
    - name: &port http
      protocol: TCP
      port: 80
      targetPort: *port
  type: ClusterIP
