cluster/apps/default/adminer/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: adminer
  labels:
    app.kubernetes.io/name: adminer
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`adminer.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: headers@file
        - name: local-only@file
      services:
        - name: adminer
          port: 80
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME_0}-prod-tls
